# Advent-Of-Code-2023

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh  test.sh
src/: day1.cpp  day2.cpp  day3.cpp  day4.cpp  env.cpp  env.h  fetch_input.cpp  fetch_input.h  main.cpp  solutions.h
test/: test.cpp
